title and link length

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 <!-- ADD NEW MOVIE -->
 <div class="d-none" id="newMovie">
     <h1 class="text-center">New movie</h1>
-    <input id="movieTitle" type="text" placeholder="Movie title"><br>
-    <input id="movieImage" type="text" placeholder="Movie poster"><br>
+    <input id="movieTitle" type="text" placeholder="Movie title" maxlength="70"><br>
+    <input id="movieImage" type="text" placeholder="Movie poster" maxlength="400"><br>
     <input id="seatsTotal" type="number" placeholder="Seats total"><br>
     <button id="createMovie">Create a movie</button>
     <button id="goToMoviesList">Go Back</button>
